FIX: fixed the bug causing the logo to appear white on mobile

--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -473,6 +473,11 @@
 
 /* Responsive styles */
 @media (max-width: 768px) {
+  .navbar .navbar-logo-img {
+    -webkit-filter: invert(1) !important;
+    filter: invert(1) !important;
+  }
+
   .navbar-main-links {
     display: none;
   }
